[gd_scene load_steps=9 format=3 uid="uid://cy6mn63arb02j"]

[ext_resource type="Theme" uid="uid://c1rbyyhtqrqqt" path="res://assets/fonts/normal_font_theme.tres" id="1_8vu6e"]
[ext_resource type="Script" path="res://src/display/HealthBar.gd" id="1_37kk7"]
[ext_resource type="Texture2D" uid="uid://bgxma3npk0foe" path="res://assets/art/ui/health_bar_border.png" id="2_sqtnc"]
[ext_resource type="PackedScene" uid="uid://cwp37vhuqicll" path="res://src/display/BlockIcon.tscn" id="4_31vk6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmba1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gh1yx"]
bg_color = Color(1, 0.682353, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qlx6n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idq1h"]
bg_color = Color(1, 1, 1, 1)

[node name="HealthBar" type="MarginContainer"]
custom_minimum_size = Vector2(0, 10)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_8vu6e")
script = ExtResource("1_37kk7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ChaseBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_dmba1")
theme_override_styles/fill = SubResource("StyleBoxFlat_gh1yx")
value = 100.0
show_percentage = false

[node name="ValueBar" type="ProgressBar" parent="VBoxContainer/ChaseBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_qlx6n")
theme_override_styles/fill = SubResource("StyleBoxFlat_idq1h")
value = 100.0
show_percentage = false

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/ChaseBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sqtnc")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="BlockIcon" parent="VBoxContainer/ChaseBar" instance=ExtResource("4_31vk6")]
layout_mode = 1
offset_left = -20.0
grow_horizontal = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 16
text = "10/10"
horizontal_alignment = 1

[connection signal="resized" from="." to="." method="_on_resized"]
